Closed Bug 1042946 Opened 10 years ago Closed 10 years ago

Discard back buffer on error in ClientTiledLayerBuffer::ValidateTile()

Categories

(Core :: Graphics: Layers, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

In ClientTiledLayerBuffer::ValidateTile(), when the following code failed, the function discards only front buffer.

>  if (!backBuffer->Lock(OpenMode::OPEN_READ_WRITE)) {
>    NS_WARNING("Failed to lock tile TextureClient for updating.");
>    aTile.DiscardFrontBuffer();
>    return aTile;
>  }
Assignee: nobody → sotaro.ikeda.g
Attachment #8461111 - Flags: review?(nical.bugzilla)
Attachment #8461111 - Flags: review?(nical.bugzilla) → review+
Depends on: 1044061
https://hg.mozilla.org/mozilla-central/rev/707fe2b64a85
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: