Bug 1042946 - Discard back buffer on error in ClientTiledLayerBuffer::ValidateTile() r=nical

Conflicts:
	gfx/layers/client/TiledContentClient.cpp